--- a/index.html
+++ b/index.html
@@ -115,6 +115,42 @@
                 <img src="./img/information-group.png" alt="group-img" width="595" height="433">
             </div>
         </section>
+
+        <section class="information">
+            <div class="container information__container">
+                <div class="information__box">
+                    <h2 class="information__heading">How It Work</h2>
+                    <p class="information__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et hendrerit euismod fusce sit. </p>
+                </div>
+
+                <ul class="information__list">
+                    <li class="information__item">
+                        <img class="information__img" src="./img/online-learning 1.png" alt="card-img" width="80" height="80">
+                        <h3 class="information__item-heading">Learn More Online</h3>
+                        <p class="information__item-desc">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Aliquam et hendrer it eui smod fusce sit.</p>
+                    </li>
+
+                    <li class="information__item">
+                        <img class="information__img" src="./img/online-learning 2.png" alt="card-img" width="80" height="80">
+                        <h3 class="information__item-heading">Learn More Online</h3>
+                        <p class="information__item-desc">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Aliquam et hendrer it eui smod fusce sit.</p>
+                    </li>
+
+                    <li class="information__item">
+                        <img class="information__img" src="./img/online-learning 3.png" alt="card-img" width="80" height="80">
+                        <h3 class="information__item-heading">Learn More Online</h3>
+                        <p class="information__item-desc">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Aliquam et hendrer it eui smod fusce sit.</p>
+                    </li>
+
+                    <li class="information__item">
+                        <img class="information__img" src="./img/o.png" alt="card-img" width="80" height="80">
+                        <h3 class="information__item-heading">Learn More Online</h3>
+                        <p class="information__item-desc">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Aliquam et hendrer it eui smod fusce sit.</p>
+                    </li>
+
+                </ul>
+            </div>
+        </section>
     </main>
     <!--FOOTER-->
     <footer></footer>
